# haskell-hsort

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  benchmark.html  cabal.project  hsort.cabal  psort.py  stack.yaml  testsort.sh
app/: Main.hs
bench/: Bench.hs
src/: Generator.hs  Main.hs  QuickSort.hs
