name:               hsort
version:            0.13.0
synopsis:           Test sort functions
description:        Test sort function over String and Text data types
homepage:           https://github.com/frankhjung/hsort#readme
license:            BSD3
license-file:       LICENSE
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2017-2020 Frank H Jung
category:           education
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable hsort
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  other-modules:    Paths_hsort
  build-depends:    base
                  , containers
                  , parseargs
                  , text
                  , hsort

library
  hs-source-dirs:   src
  exposed-modules:  Generator
                  , QuickSort
  default-language: Haskell2010
  build-depends:    base
                  , random-strings
                  , random
  ghc-options:      -Wall

benchmark benchmark
  hs-source-dirs:   bench
  main-is:          Bench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , containers
                  , criterion
                  , text
                  , hsort

