cabal-version:        3.0

name:                 hsort
version:              0.15.0
synopsis:             Test sort functions
description:          Test sort function over String and Text data types
homepage:             https://github.com/frankhjung/hsort#readme
license:              BSD-3-Clause
license-file:         LICENSE
author:               Frank Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2017-2023 Frank H Jung
build-type:           Simple
extra-source-files:   README.md

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    QuickSort
                    , Generator
  build-depends:      base >=4 && <5
                    , random >=1.1 && <1.3
                    , random-strings >= 0.1 && <0.2

executable            hsort
  default-language:   Haskell2010
  hs-source-dirs:     app
                    , src
  main-is:            Main.hs
  build-depends:      base
                    , containers >=0.6 && <0.7
                    , parseargs >=0.2 && <0.3
                    , random
                    , random-strings
                    , text >=1.2 && <1.3
                    , hsort
  other-modules:      Paths_hsort
                    , QuickSort
                    , Generator

benchmark             benchmark
  default-language:   Haskell2010
  hs-source-dirs:     bench
                    , src
  main-is:            Bench.hs
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , containers
                    , criterion >=1.5 && <1.6
                    , random
                    , random-strings
                    , text
                    , hsort
  other-modules:      Paths_hsort
                    , QuickSort
                    , Generator